@@ -135,7 +135,6 @@ Random numbers parsed: 10000000 str: 46706439.74837267 num: 46706439.74837267
 Time: 463 ms
 ~~~
 
-
 Java:
 ---
 
@@ -146,24 +145,22 @@ Java HotSpot(TM) 64-Bit Server VM (build 21.0.2+13-LTS-58, mixed mode, sharing)
 
 Java HotSpot(TM) 64-Bit Server VM
 Random numbers parsed: 10000000 str: 46706439.74837267 num: 46706439.74837267
-Time: 1923 ms
+Time: 1954 ms
 
 
 + /home/dz/prg/graalvm/bin/javac -d target src/Main.java
 
-OpenJDK 64-Bit Server VM GraalVM CE 22.2.0 (build 11.0.16+8-jvmci-22.2-b06, mixed mode, sharing)
+OpenJDK 64-Bit Server VM GraalVM CE 21.0.2+13.1 (build 21.0.2+13-jvmci-23.1-b30, mixed mode, sharing)
 
 OpenJDK 64-Bit Server VM
 Random numbers parsed: 10000000 str: 46706439.74837267 num: 46706439.74837267
-Time: 1732 ms
+Time: 1783 ms
 
 + /home/dz/prg/graalvm/bin/native-image -O3 --no-fallback -cp target Main target/Main
-WARNING: Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports
-WARNING: Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports
-WARNING: Unknown module: org.graalvm.nativeimage.llvm specified to --add-exports
 
 Substrate VM
 Random numbers parsed: 10000000 str: 46706439.74837267 num: 46706439.74837267
-Time: 4219 ms
+Time: 3783 ms
 
 ~~~
+`
